--- a/package.json
+++ b/package.json
@@ -6,18 +6,32 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "start": "node ./dist/src/index.js",
+    "typecheck": "tsc --noEmit",
+    "build": "tsc -p tsconfig.build.json && tsc-alias",
     "lint": "eslint",
     "lint:fix": "eslint --fix"
   },
   "dependencies": {
-    "hono": "^4.9.9"
+    "@hono/node-server": "^1.19.5",
+    "@hono/zod-validator": "^0.7.3",
+    "@tsconfig/node22": "^22.0.2",
+    "dotenv": "^17.2.3",
+    "hono": "^4.9.9",
+    "hono-pino": "^0.10.2",
+    "pino": "^9.12.0",
+    "pino-pretty": "^13.1.1",
+    "tsc-alias": "^1.8.16",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.4.1",
-    "@types/node": "^20.11.17",
+    "@types/node": "^24.6.0",
     "eslint": "^9.36.0",
-    "eslint-plugin-format": "^1.0.1",
-    "tsx": "^4.7.1",
-    "typescript": "^5.8.3"
+    "eslint-plugin-format": "^1.0.2",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.2"
+  },
+  "overrides": {
+    "typescript": "5.9.2"
   }
 }
