--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,17 @@
     "target": "ESNext",
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
+    "baseUrl": "./",
     "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "types": ["node"],
     "strict": true,
     "outDir": "./dist",
     "skipLibCheck": true
   },
-  "exclude": ["node_modules"]
+  "include": ["**/*"],
+  "exclude": ["dist"]
 }
