--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "typecheck": "tsc --noEmit",
     "build": "tsc -p tsconfig.build.json && tsc-alias",
     "lint": "eslint",
-    "lint:fix": "eslint --fix"
+    "lint:fix": "eslint --fix",
+    "type-check": "tsc --noEmit",
+    "prepare": "husky"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.5",
@@ -18,6 +20,7 @@
     "dotenv": "^17.2.3",
     "hono": "^4.9.9",
     "hono-pino": "^0.10.2",
+    "husky": "^9.1.7",
     "pino": "^9.12.0",
     "pino-pretty": "^13.1.1",
     "tsc-alias": "^1.8.16",
@@ -28,10 +31,16 @@
     "@types/node": "^24.6.0",
     "eslint": "^9.36.0",
     "eslint-plugin-format": "^1.0.2",
+    "lint-staged": "^16.2.3",
     "tsx": "^4.20.6",
     "typescript": "^5.9.2"
   },
   "overrides": {
     "typescript": "5.9.2"
+  },
+  "lint-staged": {
+    "*": [
+      "eslint"
+    ]
   }
 }
