--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "node ./dist/src/index.js",
     "typecheck": "tsc --noEmit",
     "build": "tsc -p tsconfig.build.json && tsc-alias",
+    "test": "vitest",
+    "test:run": "vitest --run",
+    "test:ui": "vitest --ui",
+    "coverage": "vitest run --coverage",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "type-check": "tsc --noEmit",
@@ -17,6 +21,7 @@
     "@hono/node-server": "^1.19.5",
     "@hono/zod-validator": "^0.7.3",
     "dotenv": "^17.2.3",
+    "dotenv-expand": "^12.0.3",
     "hono": "^4.9.9",
     "hono-pino": "^0.10.2",
     "pino": "^9.12.0",
@@ -33,7 +38,8 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.3",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   },
   "overrides": {
     "typescript": "5.9.2"
