--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "@hono/node-server": "^1.19.5",
     "@hono/zod-validator": "^0.7.3",
+    "@neondatabase/serverless": "^1.0.2",
     "dotenv": "^17.2.3",
     "dotenv-expand": "^12.0.3",
+    "drizzle-orm": "^0.44.5",
     "hono": "^4.9.9",
     "hono-pino": "^0.10.2",
     "pino": "^9.12.0",
@@ -33,6 +35,7 @@
     "@antfu/eslint-config": "^5.4.1",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^24.6.0",
+    "drizzle-kit": "^0.31.5",
     "eslint": "^9.36.0",
     "eslint-plugin-format": "^1.0.2",
     "husky": "^9.1.7",
