--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@hono/node-server": "^1.19.5",
     "@hono/zod-validator": "^0.7.3",
     "@neondatabase/serverless": "^1.0.2",
+    "@scalar/hono-api-reference": "^0.9.19",
     "dotenv": "^17.2.3",
     "dotenv-expand": "^12.0.3",
     "drizzle-orm": "^0.44.5",
